# 2022_20498706

./: .gitignore  Eakkorn.txt  README.md  adder_8h.html  adder_8h_source.html  files.html  hello.cpp
Worksheet3/: adder.h  cal.cpp
Worksheet3/adder_dynamic/include/: adder.h
Worksheet3/adder_static/lib/: libadder.lib
Worksheet4/: CMakeLists.txt
Worksheet4/Calc/: CMakeLists.txt  adder.h
Worksheet5/build-qt_20498706-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja
Worksheet5/build-qt_20498706-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
Worksheet5/build-qt_20498706-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/qt_20498706_autogen/: deps
Worksheet5/build-qt_20498706-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/qt_20498706_autogen/EWIEGA46WW/: moc_ModelPartList.cpp  moc_ModelPartList.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_optiondialog.cpp  moc_optiondialog.cpp.d  qrc_icons.cpp
Worksheet5/build-qt_20498706-Desktop_Qt_6_4_2_MSVC2019_64bit-Debug/qt_20498706_autogen/include/: ui_mainwindow.h  ui_optiondialog.h
Worksheet5/qt_20498706/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.ui
Worksheet7/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp
Worksheet7/latex/: adder_8h_source.tex
worksheet6/exercise3/qt_20498706/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.h
worksheet7/: adder.h
